welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: Int does not take parameters
for (k <- 0 to num.length()-1 ) {
                         ^