welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
var c=0

for (k <- 0 to num.length()-1 ) {
	if (num(k+1)> num(k) ) c=c+1
}
return c
}
